--- a/code/iftracer/iftracer/CMakeLists.txt
+++ b/code/iftracer/iftracer/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.5.1)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(OPT_CFLAGS "${OPT_CFLAGS} -DDEBUG")
-message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}/../../workspace/deps/dynamorio/build")
-find_package(DynamoRIO EXACT REQUIRED PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../../workspace/deps/dynamorio/build)
+message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}/../../workspace/deps/dynamorio/build/cmake")
+find_package(DynamoRIO EXACT REQUIRED PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../../dynamorio/build/cmake)
 if (NOT DynamoRIO_FOUND)
   message(FATAL_ERROR "DynamoRIO package required to build")
 endif(NOT DynamoRIO_FOUND)
