--- a/code/iftracer/ifLineTracer/CMakeLists.txt
+++ b/code/iftracer/ifLineTracer/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5.1)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(OPT_CFLAGS "${OPT_CFLAGS} -DDEBUG")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CL_CFLAGS}")
-message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}/../../workspace/deps/dynamorio/build")
+message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}/../../dynamorio/build")
 find_package(DynamoRIO EXACT REQUIRED PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../../dynamorio/build)
 if (NOT DynamoRIO_FOUND)
   message(FATAL_ERROR "DynamoRIO package required to build")
