modift setup.sh

--- a/code/iftracer/iftracer/CMakeLists.txt
+++ b/code/iftracer/iftracer/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5.1)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(OPT_CFLAGS "${OPT_CFLAGS} -DDEBUG")
-message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}/../../dynamorio/buil")
+message(STATUS "${CMAKE_CURRENT_SOURCE_DIR}/../../dynamorio/build")
 find_package(DynamoRIO EXACT REQUIRED PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../../dynamorio/build)
 if (NOT DynamoRIO_FOUND)
   message(FATAL_ERROR "DynamoRIO package required to build")
